{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 378,
  "lineage": "9f3bed7c-02c7-1778-b7eb-91ce16c14e4f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:loadbalancer/app/expense-tracker-dev-alb/914a4bd62007b36c",
            "arn_suffix": "app/expense-tracker-dev-alb/914a4bd62007b36c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "expense-tracker-dev-alb-889354652.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:625444834398:loadbalancer/app/expense-tracker-dev-alb/914a4bd62007b36c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "expense-tracker-dev-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-038e09a15b041a6bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0288e41d00fcc0f7e"
              },
              {
                "subnet_id": "subnet-07828bfa0bb517c14"
              },
              {
                "subnet_id": "subnet-07a21dad870439056"
              },
              {
                "subnet_id": "subnet-083297fa67f45925c"
              },
              {
                "subnet_id": "subnet-0ba1c4eaed5c7490f"
              },
              {
                "subnet_id": "subnet-0f0f21e921fde0313"
              }
            ],
            "subnets": [
              "subnet-0288e41d00fcc0f7e",
              "subnet-07828bfa0bb517c14",
              "subnet-07a21dad870439056",
              "subnet-083297fa67f45925c",
              "subnet-0ba1c4eaed5c7490f",
              "subnet-0f0f21e921fde0313"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "vpc_id": "vpc-086b6ecf93cff0e1d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:loadbalancer/app/expense-tracker-dev-alb/914a4bd62007b36c"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:listener/app/expense-tracker-dev-alb/914a4bd62007b36c/dc5e72bb5a4bfbf6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:625444834398:listener/app/expense-tracker-dev-alb/914a4bd62007b36c/dc5e72bb5a4bfbf6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:loadbalancer/app/expense-tracker-dev-alb/914a4bd62007b36c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:listener/app/expense-tracker-dev-alb/914a4bd62007b36c/dc5e72bb5a4bfbf6"
          },
          "dependencies": [
            "module.alb.aws_lb.app",
            "module.alb.aws_security_group.alb_sg",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:targetgroup/expense-tracker-dev-tg/a27fa114e9e1c64d",
            "arn_suffix": "targetgroup/expense-tracker-dev-tg/a27fa114e9e1c64d",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/docs/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:625444834398:targetgroup/expense-tracker-dev-tg/a27fa114e9e1c64d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "expense-tracker-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-086b6ecf93cff0e1d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:625444834398:targetgroup/expense-tracker-dev-tg/a27fa114e9e1c64d"
          },
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625444834398:security-group/sg-038e09a15b041a6bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038e09a15b041a6bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "expense-tracker-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "625444834398",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b6ecf93cff0e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "625444834398",
            "id": "sg-038e09a15b041a6bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625444834398:security-group/sg-02378b3cfdc2fbffe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02378b3cfdc2fbffe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038e09a15b041a6bb"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "expense-tracker-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "625444834398",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b6ecf93cff0e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "625444834398",
            "id": "sg-02378b3cfdc2fbffe",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.api_cert",
            "module.alb.aws_lb.app",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_security_group.alb_sg",
            "module.dns.aws_acm_certificate_validation.api_cert_validation",
            "module.dns.aws_route53_record.cert_validation",
            "module.dns.aws_route53_zone.main",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625444834398:vpc/vpc-086b6ecf93cff0e1d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-043ffa400267ad224",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03b798301095b0df0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086b6ecf93cff0e1d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037e291326ca622fb",
            "owner_id": "625444834398",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625444834398:security-group/sg-071259fa6c9db4d0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071259fa6c9db4d0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02378b3cfdc2fbffe"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "expense-tracker-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "625444834398",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "chisom",
              "Project": "expense-tracker"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b6ecf93cff0e1d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "625444834398",
            "id": "sg-071259fa6c9db4d0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.api_cert",
            "module.alb.aws_lb.app",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_security_group.alb_sg",
            "module.dns.aws_acm_certificate_validation.api_cert_validation",
            "module.dns.aws_route53_record.cert_validation",
            "module.dns.aws_route53_zone.main",
            "module.ecs.aws_security_group.ecs_sg",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}